Grace/tests/gibbs/errors/t012.grace
// ERROR = L0000
var – := "en_dash"
